--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>IndexedDB video store offline</title>
     <link href="style.css" rel="stylesheet">
     <script src="index.js" defer></script>
+    
+    <meta name="apple-mobile-web-app-capable" content="yes" />
   </head>
   <body>
     <header>
