--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="index.js" defer></script>
     
-    <meta name="apple-mobile-web-app-capable" content="no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
   </head>
   <body>
     <header>
