--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="style.css" rel="stylesheet">
     <script src="index.js" defer></script>
     
+    <link rel="manifest" href="manifest.json">
     
     <link href="iphone5_splash.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="iphone6_splash.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
