--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="ipadpro1_splash.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="ipadpro3_splash.png" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
     <link href="ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+<!--     <meta name="apple-mobile-web-app-capable" content="yes" /> -->
   </head>
   <body>
     <header>
